fixed margin of locSignature and added gap instead

--- a/src/css.css
+++ b/src/css.css
@@ -100,6 +100,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 20px;
   height: 100%;
   max-width: 500px;
   color: white;
@@ -123,6 +124,7 @@ body {
 #locSignature {
   font-size: 1.5rem;
   align-self: center;
+  margin: 0px;
 }
 
 /* ------------ Contact Tab ----------------- */
